--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
     height: 96vh;
     background-image: linear-gradient(
         to right bottom, 
-        rgba(126, 213, 111, 0.8), 
-        rgba(40, 180, 131, 0.8)), 
+        rgba(126, 213, 111, 0.6), 
+        rgba(40, 180, 131, 0.6)), 
         url("./assets/hero.jpg");
     background-size: cover;
     background-position: center;
@@ -106,6 +106,18 @@ body {
     }
 }
 
+@keyframes moveInFromBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
 .btn:link,
 .btn:visited {
     text-decoration: none;
@@ -114,6 +126,7 @@ body {
     display: inline-block;
     border-radius: 100px;
     transition: all .2s ease-out;
+    position: relative;
 }
 
 .btn:hover {
@@ -129,5 +142,28 @@ body {
 .btn-white {
     background-color: #fff;
     color: #777;
-    
+    animation: moveInFromBottom 1s ease-out;
+    /* animation-fill-mode: backwards; */
+}
+
+.btn:after {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    transition: all 0.4s ease-out;
+}
+
+.btn-white:after {
+    background-color: #fff;
+}
+
+.btn-white:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
 }
