--- a/styles.css
+++ b/styles.css
@@ -27,17 +27,14 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
   position: relative;
 }
-
 .header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
-
 .header__logo {
   height: 3.5rem;
 }
-
 .header__text-box {
   position: absolute;
   top: 40%;
@@ -51,7 +48,6 @@ body {
   text-transform: uppercase;
   backface-visibility: hidden;
 }
-
 .heading-primary--main {
   display: block;
   font-size: 6rem;
@@ -61,7 +57,6 @@ body {
   animation-duration: 1s;
   animation-timing-function: ease-out;
 }
-
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
@@ -107,8 +102,7 @@ body {
     transform: translate(0);
   }
 }
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-decoration: none;
   text-transform: uppercase;
   padding: 1.5rem 4rem;
@@ -117,26 +111,28 @@ body {
   transition: all 0.2s ease-out;
   position: relative;
 }
-
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
-
 .btn:active {
   transform: translateY(-1px);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
-
 .btn--white {
   background-color: #ffffff;
   color: #777;
 }
-
+.btn--white::after {
+  background-color: #ffffff;
+}
+.btn--white:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
 .btn--animate {
   animation: moveInFromBottom 1s ease-out;
 }
-
 .btn:after {
   content: "";
   display: inline-block;
@@ -148,15 +144,6 @@ body {
   width: 100%;
   border-radius: 10rem;
   transition: all 0.4s ease-out;
-}
-
-.btn--white:after {
-  background-color: #ffffff;
-}
-
-.btn--white:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
