--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,17 @@
-$color-light-green: rgba(71, 221, 45, 0.8);
-$color-dark-green: rgba(32, 146, 106, 0.6);
-$color-primary-text: #ffffff;
-$color-secondary-text: #777;
-$color-primary-background: #ffffff;
-$color-primary-shadow: #000;
+@import "./abstracts/functions";
+@import "./abstracts/mixins";
+@import "./abstracts/variables";
+
+@import "./base/animation";
+@import "./base/base";
+@import "./base/typography";
+@import "./base/utilities";
+
+@import "./components/button";
+
+@import "./layout/header";
+
+@import "./pages/home";
 
 *,
 *::after,
@@ -24,36 +32,6 @@ body {
     line-height: 1.7;
     color: $color-secondary-text;
     padding: 3rem;
-}
-
-.header {
-    height: 96vh;
-    background-image: linear-gradient(to right bottom,
-            $color-light-green,
-            $color-dark-green),
-        url("./assets/hero.jpg");
-    background-size: cover;
-    background-position: center;
-    clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
-    position: relative;
-
-    &__logo-box {
-        position: absolute;
-        top: 4rem;
-        left: 4rem;
-    }
-
-    &__logo {
-        height: 3.5rem;
-    }
-
-    &__text-box {
-        position: absolute;
-        top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-    }
 }
 
 .heading-primary {
@@ -78,104 +56,5 @@ body {
         letter-spacing: 1.75rem;
         animation: moveInFromRight 1s ease-out;
         margin-bottom: 6rem;
-    }
-}
-
-@keyframes moveInFromLeft {
-    0% {
-        opacity: 0%;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        transform: translateX(1rem);
-    }
-
-    100% {
-        opacity: 100%;
-        transform: translate(0);
-    }
-}
-
-@keyframes moveInFromRight {
-    0% {
-        opacity: 0;
-        transform: translateX(10rem);
-    }
-
-    80% {
-        transform: translateX(-1rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-@keyframes moveInFromBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(5rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
-.btn {
-
-    &:link,
-    &:visited {
-        text-decoration: none;
-        text-transform: uppercase;
-        padding: 1.5rem 4rem;
-        display: inline-block;
-        border-radius: 10rem;
-        transition: all .2s ease-out;
-        position: relative;
-    }
-
-    &:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 1rem 2rem rgba($color-primary-shadow, 0.2);
-    }
-
-    &:active {
-        transform: translateY(-1px);
-        box-shadow: 0 .5rem 1rem rgba($color-primary-shadow, 0.2);
-    }
-
-    &--white {
-        background-color: $color-primary-background;
-        color: $color-secondary-text;
-
-        &::after {
-            background-color: $color-primary-background;
-        }
-
-        &:hover::after {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
-    }
-
-    &--animate {
-        animation: moveInFromBottom 1s ease-out;
-    }
-
-    &:after {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        height: 100%;
-        width: 100%;
-        border-radius: 10rem;
-        transition: all 0.4s ease-out;
     }
 }
