Add grid layout

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,12 @@
+// Colors
 $color-light-green: rgba(71, 221, 45, 0.8);
 $color-dark-green: rgba(32, 146, 106, 0.6);
 $color-primary-text: #ffffff;
 $color-secondary-text: #777;
-$color-primary-background: #ffffff;
+$color-primary-background: #fff;
 $color-primary-shadow: #000;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 4rem;
+$gutter-horizontal: 6rem;
