--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,17 +1,8 @@
-@import "./abstracts/functions";
-@import "./abstracts/mixins";
-@import "./abstracts/variables";
-
-@import "./base/animation";
-@import "./base/base";
-@import "./base/typography";
-@import "./base/utilities";
-
-@import "./components/button";
-
-@import "./layout/header";
-
-@import "./pages/home";
+@use "./abstracts" as abs;
+@use "./base";
+@use "./components";
+@use "./layout";
+@use "./pages";
 
 *,
 *::after,
@@ -30,12 +21,12 @@ body {
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.7;
-    color: $color-secondary-text;
+    color: abs.$color-secondary-text;
     padding: 3rem;
 }
 
 .heading-primary {
-    color: $color-primary-text;
+    color: abs.$color-primary-text;
     text-transform: uppercase;
     backface-visibility: hidden;
 
