--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,15 +1,51 @@
-@use '../abstracts/variables' as vars;
+@use '../abstracts' as abs;
 
 .grid-test {
     margin-top: 3rem;
 
     & .row {
-        max-width: vars.$grid-width;
+        max-width: abs.$grid-width;
         margin: 0 auto;
         border: 2px solid blueviolet;
+        @include abs.clearFix;
 
         &:not(:last-child) {
-            margin-bottom: vars.$gutter-vertical;
+            margin-bottom: abs.$gutter-vertical;
+        }
+
+        [class^=col-] {
+            color: white;
+            background-color: orangered;
+            padding: .6rem .8rem;
+            float: left;
+
+            &:not(:last-child) {
+                margin-right: abs.$gutter-horizontal;
+            }
+        }
+
+        .col-1-of-2 {
+            width: calc((100% - #{abs.$gutter-horizontal}) / 2);
+        }
+
+        .col-1-of-3 {
+            width: calc((100% - 2 * #{abs.$gutter-horizontal}) / 3);
+        }
+
+        .col-2-of-3 {
+            width: calc(2*((100% - 2 * #{abs.$gutter-horizontal}) / 3) + #{abs.$gutter-horizontal});
+        }
+
+        .col-1-of-4 {
+            width: calc((100% - 3 * #{abs.$gutter-horizontal}) / 4);
+        }
+
+         .col-2-of-4 {
+            width: calc(2*((100% - 3 * #{abs.$gutter-horizontal}) / 4) + #{abs.$gutter-horizontal});
+        }
+
+         .col-3-of-4 {
+            width: calc(3*((100% - 3 * #{abs.$gutter-horizontal}) / 4) + 2 * #{abs.$gutter-horizontal});
         }
     }
 }
