--- a/styles.css
+++ b/styles.css
@@ -110,8 +110,40 @@
   margin: 0 auto;
   border: 2px solid blueviolet;
 }
+.grid-test .row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
 .grid-test .row:not(:last-child) {
   margin-bottom: 4rem;
+}
+.grid-test .row [class^=col-] {
+  color: white;
+  background-color: orangered;
+  padding: 0.6rem 0.8rem;
+  float: left;
+}
+.grid-test .row [class^=col-]:not(:last-child) {
+  margin-right: 6rem;
+}
+.grid-test .row .col-1-of-2 {
+  width: calc((100% - 6rem) / 2);
+}
+.grid-test .row .col-1-of-3 {
+  width: calc((100% - 2 * 6rem) / 3);
+}
+.grid-test .row .col-2-of-3 {
+  width: calc(2 * (100% - 2 * 6rem) / 3 + 6rem);
+}
+.grid-test .row .col-1-of-4 {
+  width: calc((100% - 3 * 6rem) / 4);
+}
+.grid-test .row .col-2-of-4 {
+  width: calc(2 * (100% - 3 * 6rem) / 4 + 6rem);
+}
+.grid-test .row .col-3-of-4 {
+  width: calc(3 * (100% - 3 * 6rem) / 4 + 2 * 6rem);
 }
 
 *,
