craete about section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,15 @@
 // Colors
 $color-light-green: rgba(71, 221, 45, 0.8);
+$color-light-green-text: rgba(71, 221, 45);
 $color-dark-green: rgba(32, 146, 106, 0.6);
 $color-primary-text: #ffffff;
 $color-secondary-text: #777;
 $color-primary-background: #fff;
 $color-primary-shadow: #000;
+$color-gray-light-1: #f7f7f7;
+
+//FONTS
+$default-font-size: 1.6rem;
 
 //GRID
 $grid-width: 114rem;
