--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,51 @@
     transform: translate(0);
   }
 }
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  color: transparent;
+  letter-spacing: 2px;
+  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
+  -webkit-background-clip: text;
+  transition: all 0.2s;
+}
+.heading-secondary:hover {
+  transform: skewY(2deg) skewX(15deg) scale(1.1);
+  text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.heading-tertiary {
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+}
+
+.paragraph {
+  font-size: 1.6rem;
+}
+.paragraph:not(:last-child) {
+  margin-bottom: 3rem;
+}
+
+.u-center-text {
+  text-align: center;
+}
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem;
+}
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem;
+}
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
+}
+
 .btn:link, .btn:visited {
   text-decoration: none;
   text-transform: uppercase;
@@ -78,8 +123,29 @@
   transition: all 0.4s ease-out;
 }
 
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: rgba(71, 221, 45, 0.8);
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid rgb(71, 221, 45);
+  padding: 0.3rem 0.6rem;
+  transition: all 0.2s;
+}
+.btn-text:hover {
+  background-color: rgb(71, 221, 45);
+  color: white;
+  border-radius: 5%;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
+}
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  transform: translateY(0);
+}
+
 .header {
-  height: 96vh;
+  height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/hero.jpg");
   background-size: cover;
   background-position: center;
@@ -102,48 +168,48 @@
   text-align: center;
 }
 
-.grid-test {
-  margin-top: 3rem;
-}
-.grid-test .row {
+.row {
   max-width: 114rem;
   margin: 0 auto;
-  border: 2px solid blueviolet;
 }
-.grid-test .row::after {
+.row::after {
   content: "";
   display: table;
   clear: both;
 }
-.grid-test .row:not(:last-child) {
+.row:not(:last-child) {
   margin-bottom: 4rem;
 }
-.grid-test .row [class^=col-] {
-  color: white;
-  background-color: orangered;
-  padding: 0.6rem 0.8rem;
+.row [class^=col-] {
+  color: black;
   float: left;
 }
-.grid-test .row [class^=col-]:not(:last-child) {
+.row [class^=col-]:not(:last-child) {
   margin-right: 6rem;
 }
-.grid-test .row .col-1-of-2 {
+.row .col-1-of-2 {
   width: calc((100% - 6rem) / 2);
 }
-.grid-test .row .col-1-of-3 {
+.row .col-1-of-3 {
   width: calc((100% - 2 * 6rem) / 3);
 }
-.grid-test .row .col-2-of-3 {
+.row .col-2-of-3 {
   width: calc(2 * (100% - 2 * 6rem) / 3 + 6rem);
 }
-.grid-test .row .col-1-of-4 {
+.row .col-1-of-4 {
   width: calc((100% - 3 * 6rem) / 4);
 }
-.grid-test .row .col-2-of-4 {
+.row .col-2-of-4 {
   width: calc(2 * (100% - 3 * 6rem) / 4 + 6rem);
 }
-.grid-test .row .col-3-of-4 {
+.row .col-3-of-4 {
   width: calc(3 * (100% - 3 * 6rem) / 4 + 2 * 6rem);
+}
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -25vh;
 }
 
 *,
