add features section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,6 +2,10 @@
 $color-light-green: rgba(71, 221, 45, 0.8);
 $color-light-green-text: rgba(71, 221, 45);
 $color-dark-green: rgba(32, 146, 106, 0.6);
+$color-secondary-light: #ffb900;
+$color-secondary-dark: #ff7730;
+$color-tertiary-light: #2998ff;
+$color-tertiary-dark: #5643fa;
 $color-primary-text: #ffffff;
 $color-secondary-text: #777;
 $color-primary-background: #fff;
