--- a/styles.css
+++ b/styles.css
@@ -200,11 +200,70 @@
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.2);
 }
 
+.card {
+  perspective: 100rem;
+  -moz-perspective: 100rem;
+  position: relative;
+  height: 50rem;
+}
+.card__side {
+  height: 50rem;
+  transition: all 0.9s ease;
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  backface-visibility: hidden;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+}
+.card__side--front {
+  background-color: #fff;
+}
+.card__side--back {
+  background-color: blueviolet;
+  transform: rotateY(180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+}
+.card__side--back-2 {
+  background-image: linear-gradient();
+}
+.card__side--back-3 {
+  background-image: linear-gradient();
+}
+.card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card__side--back {
+  transform: rotateY(0deg);
+}
+.card__picture {
+  background-size: cover;
+  background-position: center;
+  height: 23rem;
+  background-blend-mode: screen;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+}
+.card__picture--1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("./assets/images/nat-5.jpg");
+}
+.card__picture--2 {
+  background-image: url("./assets/images/nat-5.jpg");
+}
+.card__picture--3 {
+  background-image: url("./assets/images/nat-5.jpg");
+}
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/hero.jpg");
   background-size: cover;
   background-position: center;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
   position: relative;
 }
@@ -278,6 +337,12 @@
 }
 .section-feature > * {
   transform: skewY(7deg);
+}
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -15vh;
 }
 
 *,
