--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-secondary-text: #777;
 $color-primary-background: #fff;
 $color-primary-shadow: #000;
 $color-gray-light-1: #f7f7f7;
+$color-gray-light-2: #eee;
 
 //FONTS
 $default-font-size: 1.6rem;
