--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,14 @@
   margin-bottom: 1.5rem;
 }
 
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
+.u-margin-top-huge {
+  margin-top: 10rem;
+}
+
 .btn:link, .btn:visited {
   text-decoration: none;
   text-transform: uppercase;
@@ -103,9 +111,12 @@
 .btn--white::after {
   background-color: #fff;
 }
-.btn--white:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
+.btn--green {
+  background-color: rgba(71, 221, 45, 0.8);
+  color: #ffffff;
+}
+.btn--green::after {
+  background-color: rgba(71, 221, 45, 0.8);
 }
 .btn--animate {
   animation: moveInFromBottom 1s ease-out;
@@ -121,6 +132,10 @@
   width: 100%;
   border-radius: 10rem;
   transition: all 0.4s ease-out;
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
 }
 
 .btn-text:link, .btn-text:visited {
@@ -204,12 +219,12 @@
   perspective: 100rem;
   -moz-perspective: 100rem;
   position: relative;
-  height: 50rem;
+  height: 52rem;
+  transform-style: preserve-3d;
 }
 .card__side {
-  height: 50rem;
-  transition: all 0.9s ease;
-  transform-style: preserve-3d;
+  height: 100%;
+  transition: transform 0.9s ease;
   position: absolute;
   top: 0;
   left: 0;
@@ -219,20 +234,19 @@
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
 }
 .card__side--front {
-  background-color: #fff;
+  background-color: white;
 }
 .card__side--back {
-  background-color: blueviolet;
   transform: rotateY(180deg);
 }
 .card__side--back-1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
 }
 .card__side--back-2 {
-  background-image: linear-gradient();
+  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
 }
 .card__side--back-3 {
-  background-image: linear-gradient();
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
 }
 .card:hover .card__side--front {
   transform: rotateY(-180deg);
@@ -247,15 +261,76 @@
   background-blend-mode: screen;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 .card__picture--1 {
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("./assets/images/nat-5.jpg");
 }
 .card__picture--2 {
-  background-image: url("./assets/images/nat-5.jpg");
+  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/nat-6.jpg");
 }
 .card__picture--3 {
-  background-image: url("./assets/images/nat-5.jpg");
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("./assets/images/nat-7.jpg");
+}
+.card__heading {
+  font-size: 2.8rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #ffffff;
+  position: absolute;
+  top: 12rem;
+  right: 2rem;
+  text-align: right;
+  width: 60%;
+}
+.card__heading-span {
+  padding: 1rem 1.5rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+.card__heading-span--1 {
+  background-image: linear-gradient(to right, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85));
+}
+.card__heading-span--2 {
+  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.85), rgba(32, 146, 106, 0.85));
+}
+.card__heading-span--3 {
+  background-image: linear-gradient(to right, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85));
+}
+.card__details ul {
+  list-style: none;
+  width: 80%;
+  margin: 2rem auto 0;
+}
+.card__details ul li {
+  text-align: center;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+.card__details ul li:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.card__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  text-align: center;
+}
+.card__price-box {
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 8rem;
+}
+.card__price-only {
+  text-transform: uppercase;
+  font-size: 1.4rem;
+}
+.card__price-value {
+  font-size: 6rem;
+  font-weight: 200;
 }
 
 .header {
