--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -22,6 +22,7 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: abs.$default-font-size;
+    z-index: 20;
 }
 
 .paragraph {
