--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@
   font-weight: 700;
   text-transform: uppercase;
   font-size: 1.6rem;
+  z-index: 20;
 }
 
 .paragraph {
@@ -282,7 +283,7 @@
   top: 12rem;
   right: 2rem;
   text-align: right;
-  width: 60%;
+  width: 65%;
 }
 .card__heading-span {
   padding: 1rem 1.5rem;
@@ -331,6 +332,76 @@
 .card__price-value {
   font-size: 6rem;
   font-weight: 200;
+}
+
+.story {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  padding: 6rem;
+  padding-left: 9rem;
+  border-radius: 3px;
+  font-size: 1.6rem;
+  transform: skewX(-12deg);
+}
+.story__shape {
+  position: relative;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  float: left;
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-shape-outside: circle(50% at 50% 50%);
+  transform: translateX(-3rem) skewX(12deg);
+  overflow: hidden;
+  z-index: 10;
+}
+.story__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.3s ease;
+  backface-visibility: hidden;
+  transform: scale(1.2);
+}
+.story__text {
+  transform: skew(12deg);
+}
+.story__caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  color: #ffffff;
+  font-size: 1.7rem;
+  text-align: center;
+  text-transform: uppercase;
+  opacity: 0;
+  transition: all 0.3s ease;
+  backface-visibility: hidden;
+}
+.story:hover .story__caption {
+  opacity: 1;
+  transform: translate(-50%, -50%);
+}
+.story:hover .story__image {
+  transform: scale(1.08);
+  filter: blur(3px) brightness(80%);
+}
+
+.bg-video {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.bg-video__content {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .header {
@@ -416,8 +487,14 @@
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 25rem 0;
+  padding: 25rem 0 10rem;
   margin-top: -15vh;
+}
+
+.section-stories {
+  padding: 10rem 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  position: relative;
 }
 
 *,
