--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $color-light-green: rgba(71, 221, 45, 0.8);
-$color-light-green-text: rgba(71, 221, 45);
+$color-light-green-text: rgb(34, 196, 6);
 $color-dark-green: rgba(32, 146, 106, 0.6);
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
@@ -20,3 +20,6 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 4rem;
 $gutter-horizontal: 6rem;
+
+//Constant
+$primary-border-radius: 3px;
