--- a/sass/components/_stories.scss
+++ b/sass/components/_stories.scss
@@ -4,7 +4,7 @@
     width: 75%;
     margin: 0 auto;
     box-shadow: 0 3rem 6rem rgba(abs.$color-primary-shadow, .1);
-    background-color: abs.$color-primary-background;
+    background-color: rgba(abs.$color-primary-background, .6);
     padding: 6rem;
     padding-left: 9rem;
     border-radius: 3px;
