--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,8 +29,20 @@
 }
 
 .section-stories {
-    // border: 2px solid black;
     padding: 10rem 0;
     background-color: rgba($color: #ffffff, $alpha: .7);
     position: relative;
+}
+
+.section-booking {
+    padding: 15rem 0;
+    background-image: linear-gradient(to right, abs.$color-light-green, abs.$color-dark-green);
+}
+
+.book {
+    background-image: linear-gradient(100deg, rgba(#ffffff, .8) 50%, transparent 50%) ,url("./assets/images/nat-10.jpg");
+    background-size: 100%;
+    height: 50rem;
+    border-radius: abs.$primary-border-radius;
+    box-shadow: 0 1.5rem 4rem rgba(abs.$color-primary-shadow, .6);
 }
