create booking section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-primary-background: #fff;
 $color-primary-shadow: #000;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
+$color-gray-dark: #999;
 
 //FONTS
 $default-font-size: 1.6rem;
