--- a/styles.css
+++ b/styles.css
@@ -405,6 +405,50 @@
   object-fit: cover;
 }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.form__input {
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  padding: 1.5rem 2rem;
+  border-radius: 2px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-bottom: 3px solid transparent;
+  width: 90%;
+  display: block;
+  transition: all 0.3s ease;
+}
+.form__input:focus {
+  outline: none;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid rgb(34, 196, 6);
+}
+.form__input::placeholder {
+  color: #999;
+}
+.form__input:user-invalid {
+  border-bottom: 3px solid #ff7730;
+}
+.form__input:user-valid {
+  border-bottom: 3px solid rgb(34, 196, 6);
+}
+.form__label {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-left: 2rem;
+  margin-top: 0.7rem;
+  display: block;
+  transition: all 0.3s ease;
+}
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem);
+}
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/hero.jpg");
@@ -509,6 +553,10 @@
   height: 50rem;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
+}
+.book__form {
+  width: 50%;
+  padding: 6rem;
 }
 
 *,
