--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -2,7 +2,7 @@
 @use "../base" as base;
 
 .btn {
-
+    &,
     &:link,
     &:visited {
         text-decoration: none;
@@ -12,6 +12,10 @@
         border-radius: 10rem;
         transition: all .2s ease-out;
         position: relative;
+
+        // for button element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -19,7 +23,8 @@
         box-shadow: 0 1rem 2rem rgba(abs.$color-primary-shadow, 0.2);
     }
 
-    &:active {
+    &:active, &:focus{
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 .5rem 1rem rgba(abs.$color-primary-shadow, 0.2);
     }
