--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,7 @@ $color-primary-shadow: #000;
 $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 $color-gray-dark: #999;
+$color-gray-dark-2:#333;
 
 //FONTS
 $default-font-size: 1.6rem;
