Creae the sliding navs animation

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,8 @@
 // Colors
-$color-light-green: rgba(71, 221, 45, 0.8);
-$color-light-green-text: rgb(34, 196, 6);
+$color-light-green: rgba(68, 216, 100, 0.8);
+$color-light-green-text: rgb(60, 199, 95);
 $color-dark-green: rgba(32, 146, 106, 0.6);
+$color-dark-green-text: rgb(32, 146, 83);
 $color-secondary-light: #ffb900;
 $color-secondary-dark: #ff7730;
 $color-tertiary-light: #2998ff;
