--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
   display: inline-block;
   color: transparent;
   letter-spacing: 2px;
-  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
+  background-image: linear-gradient(to right, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6));
   -webkit-background-clip: text;
   transition: all 0.2s;
 }
@@ -116,11 +116,11 @@
   background-color: #fff;
 }
 .btn--green {
-  background-color: rgb(34, 196, 6);
+  background-color: rgb(60, 199, 95);
   color: #ffffff;
 }
 .btn--green::after {
-  background-color: rgb(34, 196, 6);
+  background-color: rgb(60, 199, 95);
 }
 .btn--animate {
   animation: moveInFromBottom 1s ease-out;
@@ -144,15 +144,15 @@
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
-  color: rgb(34, 196, 6);
+  color: rgb(60, 199, 95);
   display: inline-block;
   text-decoration: none;
-  border-bottom: 1px solid rgb(34, 196, 6);
+  border-bottom: 1px solid rgb(60, 199, 95);
   padding: 0.3rem 0.6rem;
   transition: all 0.2s;
 }
 .btn-text:hover {
-  background-color: rgb(34, 196, 6);
+  background-color: rgb(60, 199, 95);
   color: white;
   border-radius: 5%;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
@@ -189,7 +189,7 @@
   top: 10rem;
 }
 .composition__photo:hover {
-  outline: 1.5rem solid rgb(34, 196, 6);
+  outline: 1.5rem solid rgb(60, 199, 95);
   outline-offset: 2rem;
   transform: scale(1.05) translateY(-0.5rem);
   box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
@@ -211,7 +211,7 @@
 .feature-box__icon {
   font-size: 6rem;
   margin-bottom: 0.5rem;
-  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
+  background-image: linear-gradient(to right, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6));
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -248,7 +248,7 @@
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
 }
 .card__side--back-2 {
-  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
+  background-image: linear-gradient(to right bottom, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6));
 }
 .card__side--back-3 {
   background-image: linear-gradient(to right bottom, #2998ff, #5643fa);
@@ -273,7 +273,7 @@
   background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url("./assets/images/nat-5.jpg");
 }
 .card__picture--2 {
-  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/nat-6.jpg");
+  background-image: linear-gradient(to right bottom, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/nat-6.jpg");
 }
 .card__picture--3 {
   background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url("./assets/images/nat-7.jpg");
@@ -298,7 +298,7 @@
   background-image: linear-gradient(to right, rgba(255, 185, 0, 0.85), rgba(255, 119, 48, 0.85));
 }
 .card__heading-span--2 {
-  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.85), rgba(32, 146, 106, 0.85));
+  background-image: linear-gradient(to right, rgba(68, 216, 100, 0.85), rgba(32, 146, 106, 0.85));
 }
 .card__heading-span--3 {
   background-image: linear-gradient(to right, rgba(41, 152, 255, 0.85), rgba(86, 67, 250, 0.85));
@@ -427,7 +427,7 @@
 .form__input:focus {
   outline: none;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
-  border-bottom: 3px solid rgb(34, 196, 6);
+  border-bottom: 3px solid rgb(60, 199, 95);
 }
 .form__input::placeholder {
   color: #999;
@@ -436,7 +436,7 @@
   border-bottom: 3px solid #ff7730;
 }
 .form__input:user-valid {
-  border-bottom: 3px solid rgb(34, 196, 6);
+  border-bottom: 3px solid rgb(60, 199, 95);
 }
 .form__label {
   font-size: 1.2rem;
@@ -465,7 +465,7 @@
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
-  border: 5px solid rgb(34, 196, 6);
+  border: 5px solid rgb(60, 199, 95);
   display: inline-block;
   position: absolute;
   left: 0;
@@ -479,7 +479,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(34, 196, 6);
+  background-color: rgb(60, 199, 95);
   opacity: 0;
   transform: opacity 0.3s ease;
 }
@@ -492,7 +492,7 @@
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/hero.jpg");
   background-size: cover;
   background-position: center;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 70vh, 0 100%);
@@ -589,7 +589,7 @@
   background-color: #333;
 }
 .footer__link:hover, .footer__link:active {
-  color: rgb(34, 196, 6);
+  color: rgb(60, 199, 95);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
   transform: rotate(5deg) scale(1.3);
 }
@@ -599,7 +599,70 @@
   color: #f7f7f7;
 }
 
-@forword;
+.navigation__checkbox {
+  display: none;
+}
+.navigation__button {
+  background-color: #fff;
+  position: fixed;
+  height: 7rem;
+  width: 7rem;
+  top: 6rem;
+  right: 6rem;
+  border-radius: 50%;
+  z-index: 2000;
+}
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  position: fixed;
+  top: 6.5rem;
+  right: 6.5rem;
+  background-image: radial-gradient(rgb(60, 199, 95), rgb(32, 146, 83));
+  z-index: 1000;
+  transition: transform 0.4s ease;
+  transform: scale(80);
+}
+.navigation__nav {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1500;
+}
+.navigation__list {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+}
+.navigation__item {
+  margin: 1rem;
+}
+.navigation__link:link, .navigation__link:visited {
+  display: inline-block;
+  font-size: 3rem;
+  font-weight: 300;
+  padding: 1rem 2rem;
+  text-decoration: none;
+  color: #ffffff;
+  background-image: linear-gradient(110deg, transparent 0%, transparent 50%, white 50%);
+  background-size: 220%;
+  transition: all 0.3s ease;
+}
+.navigation__link span {
+  margin-right: 1.5rem;
+}
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: rgb(60, 199, 95);
+  transform: translateX(1rem);
+}
+
 .section-about {
   background-color: #f7f7f7;
   padding: 25rem 0;
@@ -608,7 +671,7 @@
 
 .section-feature {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/nat-4.jpg");
+  background-image: linear-gradient(to right bottom, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/nat-4.jpg");
   background-size: cover;
   background-position: center;
   transform: skewY(-7deg);
@@ -632,7 +695,7 @@
 
 .section-booking {
   padding: 15rem 0;
-  background-image: linear-gradient(to right, rgba(71, 221, 45, 0.8), rgba(32, 146, 106, 0.6));
+  background-image: linear-gradient(to right, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6));
 }
 
 .book {
