--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $color-gray-light-1: #f7f7f7;
 $color-gray-light-2: #eee;
 $color-gray-dark: #999;
 $color-gray-dark-2:#333;
+$color-black-opaque: #000000c9;
 
 //FONTS
 $default-font-size: 1.6rem;
