--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -15,6 +15,8 @@
         right: 6rem;
         border-radius: 50%;
         z-index: 2000;
+        text-align: center;
+        cursor: pointer;
     }
 
     &__background {
@@ -27,16 +29,18 @@
         background-image: radial-gradient(abs.$color-light-green-text, abs.$color-dark-green-text);
         z-index: 1000;
         transition: transform 0.4s ease;
-        transform: scale(80);
     }
 
     &__nav {
         position: fixed;
         height: 100vh;
-        width: 100%;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 1500;
+        width: 0;
+        opacity: 0;
+        overflow: hidden;
+        transition: all .5s cubic-bezier(.55, -0.31, .54, 1.28);
     }
 
     &__list {
@@ -61,11 +65,12 @@
             color: abs.$color-primary-text;
             background-image: linear-gradient(110deg, transparent 0%, transparent 50%, white 50%);
             background-size: 220%;
-            transition: all 0.3s ease;
+            transition: all 0.4s ease;
         }
 
         span {
             margin-right: 1.5rem;
+            display: inline-block;
         }
 
         &:hover,
@@ -73,6 +78,75 @@
             background-position: 100%;
             color: abs.$color-light-green-text;
             transform: translateX(1rem);
+        }
+    }
+
+    // functionality
+
+    &__icon {
+        position: relative;
+        margin-top: 3.5rem;
+        padding: 1px;
+        user-select: none;
+
+        &,
+        &::before,
+        &::after {
+            display: inline-block;
+            height: 1.5px;
+            width: 3rem;
+            background-color: abs.$color-gray-dark-2;
+            border-radius: abs.$primary-border-radius;
+        }
+
+        &::after,
+        &::before {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s ease;
+        }
+
+        &::before {
+            top: -.8rem;
+        }
+
+        &::after {
+            top: .8rem;
+        }
+
+    }
+
+    &__button:hover &__icon {
+        &::before {
+            top: -1rem
+        }
+
+        &::after {
+            top: 1rem
+        }
+    }
+
+    &__checkbox:checked~&__background {
+        transform: scale(80);
+    }
+
+    &__checkbox:checked~&__nav {
+        width: 100%;
+        opacity: 1;
+    }
+
+    &__checkbox:checked+&__button &__icon {
+        background-color: transparent;
+
+        &::before {
+            transform: rotate(135deg);
+            top: 0;
+        }
+
+        &::after {
+            transform: rotate(-135deg);
+            top: 0;
         }
     }
 }
