--- a/styles.scss
+++ b/styles.scss
@@ -44,7 +44,6 @@
   background-image: linear-gradient(to right, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6));
   -webkit-background-clip: text;
   transition: all 0.2s;
-  user-select: none;
 }
 .heading-secondary:hover {
   transform: skewY(2deg) skewX(15deg) scale(1.1);
@@ -56,7 +55,6 @@
   text-transform: uppercase;
   font-size: 1.6rem;
   z-index: 20;
-  user-select: none;
 }
 
 .paragraph {
@@ -500,7 +498,6 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.7882352941);
   z-index: 5000;
-  overflow: hidden;
 }
 .popup__content {
   position: absolute;
@@ -511,33 +508,19 @@
   background-color: #fff;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.4);
   border-radius: 3px;
-  display: table;
 }
 .popup__left {
-  width: 33.3333333333%;
-  display: table-cell;
+  width: 33.333333334%;
+  float: left;
 }
 .popup__right {
   width: 66.6666666667%;
-  display: table-cell;
-  vertical-align: middle;
-  padding: 3rem 5rem;
+  float: left;
 }
 .popup__img {
   display: block;
   width: 100%;
 }
-.popup__text {
-  font-size: 1.4rem;
-  margin-bottom: 4rem;
-  column-count: 2;
-  column-gap: 4rem;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-}
-
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(68, 216, 100, 0.8), rgba(32, 146, 106, 0.6)), url("./assets/images/hero.jpg");
@@ -719,7 +702,6 @@
   position: relative;
   margin-top: 3.5rem;
   padding: 1px;
-  user-select: none;
 }
 .navigation__icon, .navigation__icon::before, .navigation__icon::after {
   display: inline-block;
@@ -856,4 +838,4 @@ body {
   margin-bottom: 6rem;
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles.scss.map */
